--- a/ABAO/src/App.css
+++ b/ABAO/src/App.css
@@ -1,101 +1,5 @@
 
-
-.color-choose div {
-	display: inline-block;
-  }
-   
-  .color-choose input[type="radio"] {
-	display: none;
-  }
-   
-  .color-choose input[type="radio"] + label span {
-	display: inline-block;
-	width: 40px;
-	height: 40px;
-	margin: -1px 4px 0 0;
-	vertical-align: middle;
-	cursor: pointer;
-	border-radius: 50%;
-	border: 2px solid #FFFFFF;
-	box-shadow: 0 1px 3px 0 rgba(0,0,0,0.33);
-  }
-   
-  .color-choose input[type="radio"]#red + label span {
-	background-color: #C91524;
-  }
-  .color-choose input[type="radio"]#blue + label span {
-	background-color: #314780;
-  }
-  .color-choose input[type="radio"]#black + label span {
-	background-color: #323232;
-  }
-  
-   
-  
-   
-  .product-color .color-choose div {
-    display: inline-block;
-    margin-right: 10px; /* Adjust the spacing between color options */
-}
-
-
-
-.product-color .color-choose label {
-    display: inline-block;
-	width: 43px; /* Set the width of the label */
-    border: 1px solid #ccc; /* Set a border for the label */
-    border-radius: 50%; /* Make the label a circle */
-    cursor: pointer;
-	transition: border-color 0.3s ease;
-}
-
-.product-color .color-choose label:hover {
-    border-color: #0193f5; /* Change the border color on hover */
-}
-
-.product-color .color-choose input[type="radio"]:checked + label {
-    border-color: #0193f5; /* Change the border color for the checked radio button */
-    background-color: #a5a5a5; /* Add a background color to highlight the selected color */
-}
-/**/
-.col-12 button {
-    background-color: black;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-	font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-.col-12 button:hover {
-    background-color: orange;
-    color: white;
-}
-
-.shopping-summery thead tr th {
-    border: none;
-    font-weight: 600;
-    color: #fff;
-    background: orange;
-    text-align: center;
-}
-.shopping-cart .total-amount .right .button5 .btn {
-    text-align: center;
-    border-radius: 0;
-    width: 100%;
-    margin-top: 10px;
-    height: 46px;
-    line-height: 18px;
-    font-size: 13px;
-    color: #fff;
-	background-color: black;
-	padding: 13px 20px;
-    cursor: pointer;
-}
-.shopping-cart .total-amount .right .button5 .btn:hover{
-	background-color: orange;
-}
-
+/*-----------------------------------------------------------------------------*/
 .color-plate {
 	position: fixed;
 	display: block;
