--- a/ABAO/src/App.css
+++ b/ABAO/src/App.css
@@ -5056,3 +5056,33 @@ body {
 	width: 100%;
 	height: 700px;
   }
+
+
+  /* đây là css cảu phân trang  */
+
+.pagination {
+	display: flex;
+	justify-content: center;
+	list-style: none;
+	padding: 35px;
+  }
+  
+  .pagination a {
+	padding: 8px;
+	margin: 0 4px;
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	text-decoration: none;
+	color: #333;
+	cursor: pointer;
+  }
+  
+  .pagination a:hover {
+	background-color: #f2f2f2;
+  }
+  
+  .pagination .active a{
+	background-color: #4caf50;
+	color: white;
+  }
+  
