--- a/ABAO/src/App.css
+++ b/ABAO/src/App.css
@@ -5087,4 +5087,7 @@ body {
 	background-color: #4caf50;
 	color: white;
   }
-  
+/*----------------------------------------------------------*/
+.trangthongtintaikhoan{
+	margin: 50px 0 50px 0;
+}
